--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -122,6 +122,8 @@
     {% include 'tailwind/menu.html' %}
 
     <main class="pt-8 pb-12 lg:pt-16 lg:pb-20">
+      {% comment %} {% block toc %}
+      {% endblock toc %} {% endcomment %}
       <section class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         {% block content %}
         {% endblock content %}
