--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -718,7 +718,7 @@
     }
 
     .toc-links .toc-link {
-        @apply inline-block lg:hidden;
+        @apply inline-block;
     }
 
     .toc-links ol {
