--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -2,25 +2,23 @@
 
 <article>
   {% if object.categories %}
-    <div>
-      {% if object.get_featured_cat %}
-        <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="inline-block">
-          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-cornflower-100 text-cornflower-800 dark:bg-cornflower-100 dark:text-cornflower-700 hover:bg-cornflower-200 dark:hover:bg-cornflower-200 dark:hover:text-cornflower-800">
-            {{ object.featured_cat_title }}
-          </span>
-        </a>
-      {% else %}
-        <a href="{{ object.categories.first.get_absolute_url }}" class="inline-block">
-          <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-cornflower-100 text-cornflower-800 dark:bg-cornflower-100 dark:text-cornflower-700 hover:bg-cornflower-200 dark:hover:bg-cornflower-200 dark:hover:text-cornflower-800">
-            {{ object.categories.first }}
-          </span>
-        </a>
-      {% endif %}
-      {% status_dot object %}
-    </div>
+    {% if object.get_featured_cat %}
+      <a href="{{ object.get_featured_cat.category.get_absolute_url }}" class="inline-block" title="Go to: '{{ object.get_featured_cat.category }}' category" tabindex="0">
+        <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-cornflower-100 text-cornflower-800 dark:bg-cornflower-100 dark:text-cornflower-700 hover:bg-cornflower-200 dark:hover:bg-cornflower-200 dark:hover:text-cornflower-800">
+          {{ object.featured_cat_title }}
+        </span>
+      </a>
+    {% else %}
+      <a href="{{ object.categories.first.get_absolute_url }}" class="inline-block" title="Go to: '{{ object.categories.first }}' category" tabindex="0">
+        <span class="inline-flex items-center px-3 py-0.5 rounded-full text-sm font-medium bg-cornflower-100 text-cornflower-800 dark:bg-cornflower-100 dark:text-cornflower-700 hover:bg-cornflower-200 dark:hover:bg-cornflower-200 dark:hover:text-cornflower-800">
+          {{ object.categories.first }}
+        </span>
+      </a>
+    {% endif %}
+    {% status_dot object %}
   {% endif %}
   <section>
-    <a href="{{ object.get_absolute_url }}" class="mt-2 inline-block text-lg font-bold text-gray-950 dark:text-jumbo-100 hover:underline">
+    <a href="{{ object.get_absolute_url }}" class="mt-2 inline-block text-lg font-bold text-gray-950 dark:text-jumbo-100 hover:underline" title="Go to: '{{ object }}' post">
       {{ object }}
     </a>
     {% if object.featuring_state and not object.featuring_state == "N" %}
@@ -57,7 +55,7 @@
     </p>
   </section>
   <section class="mt-3">
-    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-cornflower-600 hover:underline dark:text-cornflower-200">
+    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-cornflower-600 hover:underline dark:text-cornflower-200" title="Go to: '{{ object }}' post" tabindex="0">
       Read more about this {% if object|to_class_name != "customtag" %}{{ object|to_class_name }}{% else %}tag{% endif %}
     </a>
   </section>
