--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -81,7 +81,7 @@
     {% endblock page_head %}
 
     <meta name="theme-color" content="#B362FF">
-    <link type="application/json+oembed" rel="alternate" href="https://www.khodok.com/static/khoBlog/js/oembed/oembed.json" title="oEmbed Profile: JSON">
+    <link type="application/json+oembed" rel="alternate" hreflang="en" href="https://www.khodok.com/static/khoBlog/js/oembed/oembed.json" title="oEmbed Profile: JSON">
     {% if rss_feed %}
       <link rel="alternate" hreflang="en" type="application/rss+xml" title="{{ title }}" href="{{ rss_feed }}">
     {% endif %}
