--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -81,9 +81,9 @@
     {% endblock page_head %}
 
     <meta name="theme-color" content="#B362FF">
-    <link type="application/json+oembed" rel="alternate" hreflang="en" href="https://www.khodok.com/static/khoBlog/js/oembed/oembed.json" title="oEmbed Profile: JSON">
+    <link rel="alternate" type="application/json+oembed" href="https://www.khodok.com/static/khoBlog/js/oembed/oembed.json" title="oEmbed Profile: JSON">
     {% if rss_feed %}
-      <link rel="alternate" hreflang="en" type="application/rss+xml" title="{{ title }}" href="{{ rss_feed }}">
+      <link rel="alternate" type="application/rss+xml" href="{{ rss_feed }}" title="{{ title }}">
     {% endif %}
 
     {% block additional_js %}{% endblock additional_js %}
