--- a/khoBlog/templates/tailwind/card_container.html
+++ b/khoBlog/templates/tailwind/card_container.html
@@ -14,7 +14,7 @@
       {% endif %}
     </div>
     <div class="block sm:flex gap-2 mt-3 sm:mt-4">
-      <p class="text-lg font-bold sm:grow dark:text-jumbo-50">
+      <p class="text-lg font-bold w-full">
         {{ description }}
       </p>
       {% if filter_form %}
