--- a/khoBlog/templates/tailwind/content_super_buttons.html
+++ b/khoBlog/templates/tailwind/content_super_buttons.html
@@ -1,4 +1,4 @@
-<section class="w-auto text-gray-950 dark:text-jumbo-100 font-medium flex items-center">
+<section class="text-gray-950 dark:text-jumbo-100 font-medium whitespace-nowrap">
   <div class="mx-auto w-full">
     <a href="{{ create_url }}" class="hover:underline">
       Add {{ object }}
