--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -172,7 +172,7 @@
       {% for message in messages %}
         <div x-data="{ show: true }" x-init="setTimeout(() => show = false, 5000)" aria-live="assertive" class="messages fixed inset-0 top-auto flex items-end px-4 py-6 pointer-events-none sm:p-6 sm:items-start">
           <div class="w-full flex flex-col items-center space-y-4 sm:items-end">
-            <div x-show="show" x-transition:enter="transform ease-out duration-300 transition" x-transition:enter-start="translate-y-2 opacity-0 sm:translate-y-0 sm:translate-x-2" x-transition:enter-end="translate-y-0 opacity-100 sm:translate-x-0" x-transition:leave="transition ease-in duration-100" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" class="max-w-sm w-full shadow-lg rounded-lg pointer-events-auto ring-1 ring-black ring-opacity-5 overflow-hidden {% if message.tags %}message-{{ message.tags }}{% endif %}">
+            <div x-show="show" x-transition:enter="transform ease-out duration-300 transition" x-transition:enter-start="translate-y-2 opacity-0 sm:translate-y-0 sm:translate-x-2" x-transition:enter-end="translate-y-0 opacity-100 sm:translate-x-0" x-transition:leave="transition ease-in duration-100" x-transition:leave-start="opacity-100" x-transition:leave-end="opacity-0" class="max-w-sm w-full shadow-lg rounded-xl pointer-events-auto ring-1 ring-black ring-opacity-5 overflow-hidden {% if message.tags %}message-{{ message.tags }}{% endif %}">
               <div class="p-4">
                 <div class="flex items-start">
                   <div class="ml-3 w-0 flex-1">
