updated urllib3 despite botocore thingy updated reqs added toc back to desktop but not working will have to work on it

--- a/theme/static_src/src/styles.css
+++ b/theme/static_src/src/styles.css
@@ -604,6 +604,10 @@
         display: -webkit-box;
         display: -ms-flexbox;
         display: flex;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        white-space: nowrap;
+        align-items: center;
     }
 
     .sub-nav--anchored .sub-nav__link[aria-current="true"] {
