object's number (#pk)

--- a/blog/templates/blog/comments/comment_list.html
+++ b/blog/templates/blog/comments/comment_list.html
@@ -8,7 +8,7 @@
     <div class="row">
       <a class="col-auto" href="{{ comment.get_absolute_url }}" rel="noopener noreferrer">
         <strong>{{ comment.user }}
-          | #{{ comment.pk }}</strong>
+          | {{ comment.number }}</strong>
         -
         {{ comment }}</a>
     </div>
