--- a/portfolio/templates/portfolio/project_detail.html
+++ b/portfolio/templates/portfolio/project_detail.html
@@ -8,7 +8,7 @@
         <div>
           <span class="text-2xl font-bold text-gray-950 dark:text-jumbo-50">{{ project.title }}</span>
           <p class="mt-2 text-sm text-gray-500 dark:text-jumbo-200">
-            {% if project.parent_project %}<a href="{{ project.parent_project.get_absolute_url }}" class="hover:underline">Sub Project</a>{% else %}<a href="{% url 'portfolio:project_list' %}" class="hover:underline">Project</a>{% endif %} <span class="font-bold">#{{ project.pk }}</span>
+            {% if project.parent_project %}<a href="{{ project.parent_project.get_absolute_url }}" class="hover:underline">Sub Project</a>{% else %}<a href="{% url 'portfolio:project_list' %}" class="hover:underline">Project</a>{% endif %} <span class="font-bold">{{ project.number }}</span>
           </p>
         </div>
         {% sb project user=request.user %}
