--- a/khoBlog/templates/django_comments_xtd/comment_tree.html
+++ b/khoBlog/templates/django_comments_xtd/comment_tree.html
@@ -28,10 +28,7 @@
           <span class="text-sm font-normal text-flamingo-600">This comment has been removed.</span>
         {% endif %}
 
-        <span class="text-sm font-normal text-gray-950 dark:text-jumbo-50">
-          {{ item.comment.submit_date|date:'l, d F Y' }}
-          <a class="text-xs underline hover:no-underline" href="{% get_comment_permalink item.comment %}">permalink</a>
-        </span>
+        <a class="text-sm font-normal text-gray-950 dark:text-jumbo-50 underline hover:no-underline" href="{% get_comment_permalink item.comment %}">{{ item.comment.submit_date|date:'l, d F Y' }}</a>
       </section>
       {% if item.comment.is_removed %}
         {% if not user.is_superuser %}
