--- a/khoBlog/templates/tailwind/cards.html
+++ b/khoBlog/templates/tailwind/cards.html
@@ -18,7 +18,7 @@
     {% status_dot object %}
   {% endif %}
   <section>
-    <a href="{{ object.get_absolute_url }}" class="mt-2 inline-block text-lg font-bold text-gray-950 dark:text-jumbo-100 hover:underline" title="Go to: '{{ object }}' post">
+    <a href="{{ object.get_absolute_url }}" class="mt-2 inline-block text-lg font-bold text-gray-950 dark:text-jumbo-100 hover:underline" title="Go to: '{{ object }}'">
       {{ object }}
     </a>
     {% if object.featuring_state and not object.featuring_state == "N" %}
@@ -55,7 +55,7 @@
     </p>
   </section>
   <section class="mt-3">
-    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-cornflower-600 hover:underline dark:text-cornflower-200" title="Go to: '{{ object }}' post" tabindex="0">
+    <a href="{{ object.get_absolute_url }}" class="text-base font-semibold text-cornflower-600 hover:underline dark:text-cornflower-200" title="Go to: '{{ object }}'" tabindex="0">
       Read more about this {% if object|to_class_name != "customtag" %}{{ object|to_class_name }}{% else %}tag{% endif %}
     </a>
   </section>
