--- a/khoBlog/templates/tailwind/user_auth_button.html
+++ b/khoBlog/templates/tailwind/user_auth_button.html
@@ -8,18 +8,18 @@
 
   <div x-cloak x-show="open" x-transition:enter="transition ease-out duration-100" x-transition:enter-start="opacity-0 scale-95" x-transition:enter-end="opacity-100 scale-100" x-transition:leave="transition ease-in duration-75" x-transition:leave-start="opacity-100 scale-100" x-transition:leave-end="opacity-0 scale-95" class="origin-top-right absolute right-0 mt-7 w-56 superbutton_dropdown_items" x-ref="menu-items" x-description="Dropdown menu, show/hide based on menu state." role="menu" aria-orientation="vertical" aria-labelledby="user-auth-button" tabindex="-1" @keydown.arrow-up.prevent="onArrowUp()" @keydown.arrow-down.prevent="onArrowDown()" @keydown.tab="open = false" @keydown.enter.prevent="open = false" @keyup.space.prevent="open = false">
     {% if object.is_authenticated %}
-      <div class="dropdown_item_container" role="none">
+      <div class="dropdown_item_container" role="menuitem">
         <a href="{{ object.get_absolute_url }}" class="theme_option w-full flex dropdown_item" role="button" @click="open = false">Profile</a>
         <a href="{% url 'account_logout' %}" class="theme_option w-full flex dropdown_item" role="button" @click="open = false">Log out</a>
       </div>
 
       {% if object.is_superuser %}
-        <div class="dropdown_item_container" role="none">
+        <div class="dropdown_item_container" role="menuitem">
           <a href="{{ object.get_absolute_toggle_secure_mode_status_url }}" class="theme_option w-full flex dropdown_item warning" >Secure Mode Status</a>
         </div>
       {% endif %}
     {% else %}
-      <div class="dropdown_item_container" role="none">
+      <div class="dropdown_item_container" role="menuitem">
         <a href="{% url 'account_login' %}" class="theme_option w-full flex dropdown_item" role="button" @click="open = false">Log in</a>
         <a href="{% url 'account_signup' %}" class="theme_option w-full flex dropdown_item" role="button" @click="open = false">Sign up</a>
       </div>
