--- a/khoBlog/templates/tailwind/base.html
+++ b/khoBlog/templates/tailwind/base.html
@@ -60,9 +60,9 @@
     <link rel="shortlink" href="{{ CANONICAL_PATH }}">
 
     <meta property="og:site_name" content="Hello There!">
-    <meta property="og:image" content="{% static 'khoBlog/img/Ruthinkk.webp' %}">
-    <meta property="twitter:image" content="{% static 'khoBlog/img/Ruthinkk.webp' %}">
-    <link rel="apple-touch-icon" href="{% static 'khoBlog/img/RuthinkkTooBig-small-square.png' %}">
+    <meta property="og:image" content="{% static 'khoBlog/img/Ruthinkk/Ruthinkk.webp' %}">
+    <meta property="twitter:image" content="{% static 'khoBlog/img/Ruthinkk/Ruthinkk.webp' %}">
+    <link rel="apple-touch-icon" href="{% static 'khoBlog/img/Ruthinkk/Ruthinkk256x.png' %}">
 
     {% block page_head %}
       <!-- Primary Meta Tags -->
