--- a/khoBlog/templates/tailwind/menu.html
+++ b/khoBlog/templates/tailwind/menu.html
@@ -89,10 +89,16 @@
                   </button>
                 </div>
 
-                <!-- Logo (lg-) -->
-                <a href="{% url 'blog:post_list' %}" class="lg:hidden">
+                <!-- Logo (sm-) -->
+                <a href="{% url 'blog:post_list' %}" class="sm:hidden">
                   <span class="sr-only">Home page</span>
-                  <img class="h-8 w-auto sm:h-10" width="40" height="40" src="{% static 'khoBlog/img/Ruthinkk/Ruthinkk64x.webp' %}" loading="lazy" alt="Khodok's Logo">
+                  <img class="h-8 w-auto" width="32" height="32" src="{% static 'khoBlog/img/Ruthinkk/Ruthinkk32x.webp' %}" loading="lazy" alt="Khodok's Logo">
+                </a>
+
+                <!-- Logo (lg-) -->
+                <a href="{% url 'blog:post_list' %}" class="hidden sm:block lg:hidden">
+                  <span class="sr-only">Home page</span>
+                  <img class="w-auto h-10" width="40" height="40" src="{% static 'khoBlog/img/Ruthinkk/Ruthinkk64x.webp' %}" loading="lazy" alt="Khodok's Logo">
                 </a>
 
                 <div class="flex-1 flex items-center justify-end">
